--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,6 +58,72 @@
      <Compile Include="Assets\Crystal_Mine\Spline_Tool\Scripts\Path_Comp.cs" />
      <Compile Include="Assets\Crystal_Mine\Spline_Tool\Scripts\Trail_Mesh.cs" />
      <Compile Include="Assets\Easycontroller.cs" />
+     <Compile Include="Assets\FollowSplines.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Chooser\Chooser.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Chooser\Interfaces\IChooser.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\ColliderButton\ColliderButton.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\ColliderButton\Utilities\ColliderButtonInteraction.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\ColliderButton\Utilities\ColliderButtonSelector.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Communication\Client.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Communication\Protocols\NetworkProtocols.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Communication\Server.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Communication\Utilities\ClientConnector.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\DisplayObject\DisplayObject.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Events\Events.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Singleton\Singleton.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Spline\Objects\BezierCurves.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Spline\Objects\CurveDetail.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Spline\Objects\Spline.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Spline\Objects\SplineAnchor.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Spline\Objects\SplineFollower.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Spline\Objects\SplineTangent.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Spline\Utilities\SplineControlledParticleSystem.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Spline\Utilities\SplineRenderer.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\StateMachine\State.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\StateMachine\StateMachine.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\Helpers\TweenBase.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\Helpers\TweenEngine.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\Helpers\TweenUtilities.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\Tween.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\AnchoredPosition.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\CameraBackgroundColor.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\CanvasGroupAlpha.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\FieldOfView.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\ImageColor.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\LightColor.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\LightIntensity.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\LightRange.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\LocalPosition.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\LocalRotation.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\LocalScale.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\PanStereo.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\Pitch.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\Position.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\RawImageColor.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\Rotate.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\Rotation.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\ShaderColor.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\ShaderFloat.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\ShaderInt.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\ShaderVector.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\ShakePosition.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\Size.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\SplinePercentage.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\SpriteRendererColor.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\TextColor.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\TextMeshColor.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\ValueColor.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\ValueFloat.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\ValueInt.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\ValueRect.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\ValueVector2.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\ValueVector3.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\ValueVector4.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Tween\TweenActions\Volume.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Utilities\EditorUtilities.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Utilities\Initialization.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Utilities\LayerMaskHelper.cs" />
+     <Compile Include="Assets\Pixelplacement\Surge\Utilities\Math.cs" />
      <Compile Include="Assets\Reichsrevolver_M1879\Scripts\RevolverController.cs" />
      <Compile Include="Assets\Scripts\PlayerShooting.cs" />
      <Compile Include="Assets\shootingScript.cs" />
@@ -229,9 +295,12 @@
      <None Include="Assets\SteamVR\Resources\SteamVR_ClearAll.shader" />
      <None Include="Assets\SteamVR\InteractionSystem\Hints\Shaders\ControllerButtonHints.shader" />
      <None Include="Assets\SteamVR\InteractionSystem\Samples\BuggyBuddy\Materials\LightCone.shader" />
+     <None Include="Assets\Pixelplacement\Surge\ReadMe.txt" />
      <None Include="Assets\SteamVR\InteractionSystem\Teleport\Shaders\Highlight.shader" />
      <None Include="Assets\Crystal_Mine\Spline_Tool\Scripts\LICENSE.txt" />
+     <None Include="Assets\Pixelplacement\Surge\Spline\Art\Shaders\Invisible.shader" />
      <None Include="Assets\SteamVR\InteractionSystem\Teleport\Shaders\HighlighGlobal.shader" />
+     <None Include="Assets\Pixelplacement\Surge\License.txt" />
      <None Include="Assets\SteamVR\Resources\SteamVR_SphericalProjection.shader" />
      <None Include="Assets\SteamVR\Resources\SteamVR_AlphaOut.shader" />
      <None Include="Assets\SteamVR\readme.txt" />
